data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_516.wast
;; 7. **Test Description:**    A loop executing a `br_if` instruction to continue only under a particular condition, otherwise exit. Ensure that the branching correctly resumes the loop's execution. Incorrect condition handling results in a continuous loop.

(assert_invalid
  (module (func $branch-continue-loop
    (loop
      (block (br_if 1 (i32.const 0)))
    )
  ))
  "type mismatch"
)